--- a/src/main/resources/templates/list-customers.html
+++ b/src/main/resources/templates/list-customers.html
@@ -2,9 +2,35 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css">
     <title>List Customers</title>
 </head>
 <body>
-    <h1>Customers: Coming Soon...</h1>
+    <div id="wrapper">
+        <div id="header">
+            <h2>CRM - CRM Customer Application</h2>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="content">
+            <table>
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="c : ${customers}">
+                        <td th:text="${{c.firstName}}"></td>
+                        <td th:text="${{c.lastName}}"></td>
+                        <td th:text="${{c.email}}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
