--- a/src/main/resources/templates/list-customers.html
+++ b/src/main/resources/templates/list-customers.html
@@ -14,6 +14,10 @@
 
     <div id="container">
         <div id="content">
+            <input type="button" value="Add Customer"
+                onclick="window.location.href='/customer/showFormForAdd'; return false;"
+                class="add-button" />
+
             <table>
                 <thead>
                     <tr>
