Created method to handle customer-add form and customer form to handle creation and addition of a new customer

--- a/src/main/resources/templates/customer-form.html
+++ b/src/main/resources/templates/customer-form.html
@@ -16,7 +16,7 @@
     <div class="container">
         <h3>Save Customer</h3>
 
-        <form th:action="@{/customer/saveCustomer}" th:object="${customer}" method="get">
+        <form th:action="@{/customer/saveCustomer}" th:object="${customer}" method="post">
             <table>
                 <tbody>
                     <tr>
