Created method for handling Updating a saved customer

--- a/src/main/resources/templates/customer-form.html
+++ b/src/main/resources/templates/customer-form.html
@@ -37,7 +37,8 @@
                     </tr>
                 </tbody>
             </table>
-
+            <!-- Crucial if you're updating a customer -->
+            <input type="hidden" th:field="*{id}">
         </form>
 
         <div style="clear: both;">
