--- a/src/main/resources/templates/list-customers.html
+++ b/src/main/resources/templates/list-customers.html
@@ -24,6 +24,7 @@
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Email</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -31,6 +32,9 @@
                         <td th:text="${{c.firstName}}"></td>
                         <td th:text="${{c.lastName}}"></td>
                         <td th:text="${{c.email}}"></td>
+                        <td>
+                            <a th:href="@{/customer/showFormForUpdate(customerId=${c.id})}">Update</a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
