--- a/src/main/resources/templates/list-customers.html
+++ b/src/main/resources/templates/list-customers.html
@@ -33,8 +33,14 @@
                         <td th:text="${{c.lastName}}"></td>
                         <td th:text="${{c.email}}"></td>
                         <td>
-                            <a th:href="@{/customer/showFormForUpdate(customerId=${c.id})}">Update</a>
+                            <a th:href="@{/customer/showFormForUpdate(customerId=${c.id})}">Update | </a>
+                            <a th:href="@{/customer/delete(customerId=${c.id})}"
+                                onclick="if (!(confirm(
+                                	'Are you sure you want to delete this customer?'
+                                ))) return false;"
+                            >Delete</a>
                         </td>
+
                     </tr>
                 </tbody>
             </table>
